# OpenGL-Transparency

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DualDepthPeeling.sln  Readme.md  vcpkg.json
OpenGL/common/GLEW/lib/: glew32d.lib
OpenGL/common/nvModel/include/: nvModel.h
OpenGL/common/nvModel/lib/: nvModel.lib  nvModeld.lib
OpenGL/src/dual_depth_peeling/: OSD.cpp  dual_depth_peeling.cpp
common/include/: nvMatrix.h  nvQuaternion.h  nvShaderUtils.h  nvVector.h
common/nvModel/: CMakeLists.txt  nvModel.cpp  nvModel.h  nvModel.vcxproj  nvModelObj.cpp  nvModelQuery.cpp  nvShaderUtils.h  nvUtils.cpp  nvUtils.h
media/: .gitignore  CMakeLists.txt
src/: BSP.cpp  BSP.h  CMakeLists.txt  GLSLProgramObject.cpp  GLSLProgramObject.h  Mesh.cpp  Mesh.h  OSD.cpp  OSD.h  VertexBspTree.cpp  VertexBspTree.hpp  dual_depth_peeling.vcxproj  dual_depth_peeling.vcxproj.filters  opengl-transparency.cpp
src/SaveBspTree/: CMakeLists.txt  VertexPartBspTree.cpp  VertexPartBspTree.h  main.cpp
src/dual_depth_peeling/: GLSLProgramObject.cpp  GLSLProgramObject.h  OSD.cpp  OSD.h  Timer.h  dual_depth_peeling.cpp  dual_depth_peeling.vcproj
src/dual_depth_peeling/shaders/: dual_peeling_peel_fragment.glsl  dual_peeling_peel_vertex.glsl  front_peeling_final_fragment.glsl  front_peeling_init_vertex.glsl  front_peeling_peel_fragment.glsl  shade_fragment.glsl  shade_vertex.glsl  wsum_final_fragment.glsl  wsum_init_vertex.glsl
src/shaders/: 3d_fragment.glsl  3d_vertex.glsl  a_buffer_final_fragment.glsl  a_buffer_final_vertex.glsl  a_buffer_init_fragment.glsl  a_buffer_init_vertex.glsl  dual_peeling_blend_fragment.glsl  dual_peeling_final_fragment.glsl  dual_peeling_init_fragment.glsl  dual_peeling_init_vertex.glsl  dual_peeling_peel_fragment.glsl  dual_peeling_peel_vertex.glsl  dual_peeling_quad_vertex.glsl  front_peeling_blend_fragment.glsl  front_peeling_final_fragment.glsl  front_peeling_init_fragment.glsl  front_peeling_init_vertex.glsl  front_peeling_peel_fragment.glsl  linked_list_final_fragment.glsl  linked_list_final_vertex.glsl  linked_list_init_fragment.glsl  linked_list_init_vertex.glsl  quad_vertex.glsl  shade_fragment.glsl  shade_vertex.glsl  text_fragment.glsl  text_vertex.glsl  wavg_final_fragment.glsl  wavg_init_fragment.glsl  wavg_init_vertex.glsl  wsum_final_fragment.glsl  wsum_init_fragment.glsl  wsum_init_vertex.glsl
